packages/rspack-test-tools/tests/configCases/errors/hide-stack/errors.js
module.exports = [
  [/emit message hide/, { details: /emit stack hide/ }],
  [/emit stack/],
  [/throw message hide/, { details: /throw stack hide/ }],
  [/throw stack/],
]
